[20011228]
* INIT_PARSER short cut key (which initializes status of pty encoding parser)
  is added.
* invoking graphic characters by SI/SO is supported.(non-ISO2022 encoding only)

[20011227]
* if pty encoding is stateless , state of pty encoding parser is not
  reset when key is pressed.
* "ESC [ ? 25 h" , "ESC [ ? 25 l" sequences are supported.

[20011226]
* typos in mlterm.1 are fixed.(thanks to Kubota Tomohiro san)
* something like "ESC [ 34 ; 0 ; m" sequence is parsed incorrectly.fixed.
  (thanks to Sakamoto Hironori san)
* cursor is not repainted under transparent mode. fixed.
  (thanks to Uebayashi Masao san)

[20011225]
* memory leaks if you use both -m and -bi options under utf8 encoding. fixed.
* mkf/mkf_ucs4_xxx.c are thread-safe.
* Shift + Mouse Button operations under console apps useing mouse tracking
  are supported.

[20011225]
* wraparound word can be selected.
* mlterm core dumps if XMODIFIERS variable is empty or illegal value. fixed.

[20011224]
* US-ASCII chars may be shown incorrectly under EUC-CN/GBK/GB18030. fixed.
* mlterm.1 document is updated a little more.(thanks to Kubota Tomohiro san)
* Unicode <=> CNS11643-1992 plane 3 convertion table is added.
* EUC-TW is excluded from Unicode subset group.
* the default value of use_bidi and use_combining is true.
* if mlterm is resized under bidi-mode , you cannot copy&paste RTL chars. fixed.

[20011222]
* Hangul chars are not shown correctly in --noucsfont. fixed.
* manual page(mlterm.1) is updated. (thanks to Kubota Tomohiro san)
* the same CTEXT generator engine is used whether --big5bug option is set or not. fixed.

[20011221]
* option names are changed.
  --ucs2other => --noucsfont
  unicode_to_other_cs => not_use_unicode_font
  --all2ucs => --onlyucsfont
  all_cs_to_unicode => only_use_unicode_font
* full width chars are not shown correctly in --onlyucsfont. fixed.
* -8/--88591 (iso88591_font_for_usascii) option is added.